# RDI-AgentBeats-TestBehaveAlign

./: .env.example  .gitignore  .mcp.json  AGENTS.md  CONTRIBUTING.md  Dockerfile.green  Dockerfile.purple  LICENSE.md  Makefile  README.md  docker-compose-local.yml  mkdocs.yaml  pyproject.toml  scenario.toml
.claude/: .claude.json  settings.json
.claude/rules/: context-management.md
.claude/skills/commit-staged-with-message/: SKILL.md
.claude/skills/compacting-context/: SKILL.md
.claude/skills/designing-backend/: SKILL.md
.claude/skills/generating-interactive-userstory-md/: SKILL.md
.claude/skills/generating-prd-json-from-prd-md/: SKILL.md
.claude/skills/generating-prd-md-from-userstory-md/: SKILL.md
.claude/skills/implementing-python/: SKILL.md
.claude/skills/researching-codebase/: SKILL.md
.claude/skills/reviewing-code/: SKILL.md
.claude/skills/testing-python/: SKILL.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: agentbeats-run-scenario.yml  pytest.yaml  ruff.yaml
docs/: GreenAgent-PRD.md  GreenAgent-UserStory.md  PRD.md  PurpleAgent-PRD.md  PurpleAgent-UserStory.md  TODO.md  architecture.md  roadmap.md
docs/AgentBeats/: ABSTRACT.md  DEMO_VIDEO_SCRIPT.md  leaderboard_queries.json  sample_output.json
docs/arch_vis/: AgenticBenchArch.puml  ComponentDiagram.puml  SequenceDiagram.puml
docs/best-practices/: bdd-best-practices.md  python-best-practices.md  tdd-best-practices.md  testing-strategy.md
docs/research/: BDD-Track-Design.md  TDD-Track-Design.md  Test-First-Quality-Bench-Overview.md  Test-First-Quality-Bench-Research.md  Test-First-Quality-Bench-Tools.md
docs/sprints/: GreenAgent-Sprint2-PRD-Ralph.md  PurpleAgent-Sprint-1-PRD-Ralph.md
ralph/: CHANGELOG.md  README.md
ralph/docs/: LEARNINGS.md  TEMPLATE_USAGE.md  prd.json  progress.txt
ralph/docs/templates/: prd.json.template  prd.md.template  progress.txt.template
ralph/scripts/: generate_prd_json.py  init.sh  ralph.sh  reorganize_prd.sh  setup_project.sh
ralph/scripts/lib/: common.sh
scripts/data_prep/: __init__.py  download_evalplus.py  generate_bdd.py  generate_variants.py
scripts/docker/: build.sh  common.sh  push.sh
scripts/leaderboard/: generate_compose.py  query.sql  record_provenance.py
src/green/: __init__.py  agent.py  executor.py  messenger.py  models.py  server.py  settings.py
src/green/data_prep/: download_evalplus.py  generate_bdd.py  generate_variants.py
src/purple/: server.py
tests/: conftest.py  test_agent_config.py  test_bdd_dispatch.py  test_composite_score.py  test_download_evalplus.py  test_executor.py  test_fault_detection.py  test_generate_bdd.py  test_generate_variants.py  test_messenger.py  test_middleware.py  test_mutation_testing.py  test_results_generation.py  test_server.py  test_settings.py  test_task_loader.py  test_test_execution.py
